--- a/CollaborativeFiltering/CollaborativeFiltering_se21m003_Goll_100kDataset.html
+++ b/CollaborativeFiltering/CollaborativeFiltering_se21m003_Goll_100kDataset.html
@@ -14418,6 +14418,7 @@ Mean mse: 0.9336540574458415
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>All in all it can be stated that the prediction accuracy is stable amon all 5 splits but not very accurate (0.9). However, I am not certain as to where the threashold regarding an acceptable mse value lies. It is clear that the closer to 0 the better. Providing a fixed threshold for mse (e.g. 0.5) where everything below is acceptable seems arbitrary.</p>
+<p>Compared to processing the small datdaset, generating predictions with the large dataset did not yield considerably lower mean squared error values. This is rather surprising since one would expect a larger dataset to provide better models. This did not happen. Only the processing time increased rather massively.</p>
 
 </div>
 </div>
